<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Kanji-gate</string>
    <string name="kanji">漢字</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_num_flashcards">NumFlashcards</string>
    <string name="button_numbers">Numbers &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;→</string>
    <string name="button_animation">HOW TO DRAW</string>
    <string name="button_flashcards">FLASHCARDS</string>
    <string name="button_start">start</string>
    <string name="button_stop">stop</string>
    <string name="button_main_page">← Main Page</string>
    <string name="button_home">home</string>
    <string name="onyomi"><u>On-Yomi</u></string>
    <string name="kunyomi"><u>Kun-Yomi</u></string>
    <string name="examples"><u>Examples</u></string>
    <string name="tricksToRemember"><u>Tricks To Remember</u></string>
    <string name="next">next</string>
    <string name="prev">prev</string>
    <string name="NumberKanji1">一</string>
    <string name="NumberDefinition1">one</string>
    <string name="NumberStroke1">1 Stroke</string>
    <string name="NumberExample1">一時 ichiji</string>
    <string name="NumberExampleMeaning1">one o &quot; clock</string>
    <string name="NumberTrick1">Looks Like A Single Extended Finger</string>
    <string name="NumberOnyomi1">いち ichi</string>
    <string name="NumberKunyomi1">ひと hito</string>
    <string name="NumberKanji2">二</string>
    <string name="NumberDefinition2">two</string>
    <string name="NumberStroke2">2 Strokes</string>
    <string name="NumberExample2">二月 nigatsu</string>
    <string name="NumberExampleMeaning2">February</string>
    <string name="NumberTrick2">Looks Like the Middle and Index Fingers Extending</string>
    <string name="NumberOnyomi2">に ni</string>
    <string name="NumberKunyomi2">ふた futa</string>
    <string name="NumberKanji3">三</string>
    <string name="NumberDefinition3">three</string>
    <string name="NumberStroke3">3 Strokes</string>
    <string name="NumberExample3">三百円</string>
    <string name="NumberExampleMeaning3">300 yen</string>
    <string name="NumberTrick3">Looks Like Three Extended Fingers</string>
    <string name="NumberOnyomi3">さん san</string>
    <string name="NumberKunyomi3">みっ mi</string>
    <string name="NumberKanji4">四</string>
    <string name="NumberDefinition4">four</string>
    <string name="NumberStroke4">5 Strokes</string>
    <string name="NumberExample4">四月 shigatsu</string>
    <string name="NumberExampleMeaning4">April</string>
    <string name="NumberTrick4">Four Fingers Making a Fist</string>
    <string name="NumberOnyomi4">し shi</string>
    <string name="NumberKunyomi4">よん yon</string>
    <string name="NumberKanji5">五</string>
    <string name="NumberDefinition5">five</string>
    <string name="NumberStroke5">4 Strokes</string>
    <string name="NumberExample5">五歳　gosai</string>
    <string name="NumberExampleMeaning5">five years old</string>
    <string name="NumberTrick5">Four Strokes to Write this Kanji is Better than 5 Fingers</string>
    <string name="NumberOnyomi5">ご go</string>
    <string name="NumberKunyomi5">いつ　itsu</string>
    <string name="NumberKanji6">六</string>
    <string name="NumberDefinition6">six</string>
    <string name="NumberStroke6">4 Strokes</string>
    <string name="NumberExample6">六分　roppyaku</string>
    <string name="NumberExampleMeaning6">six minutes</string>
    <string name="NumberTrick6"></string>
    <string name="NumberOnyomi6">ろく　roku</string>
    <string name="NumberKunyomi6">むっ mu</string>
    <string name="NumberKanji7">七</string>
    <string name="NumberDefinition7">seven</string>
    <string name="NumberStroke7">2 Strokes</string>
    <string name="NumberExample7">七人　nananin/shichinin</string>
    <string name="NumberExampleMeaning7">seven people</string>
    <string name="NumberTrick7">Looks Like a Badly Written Kanji for "ten". Only Worth seven.</string>
    <string name="NumberOnyomi7">しち　shichi</string>
    <string name="NumberKunyomi7">なな　nana</string>
    <string name="NumberKanji8">八</string>
    <string name="NumberDefinition8">eight</string>
    <string name="NumberStroke8">2 Strokes</string>
    <string name="NumberExample8">八時　hachiji</string>
    <string name="NumberExampleMeaning8">eight o&quot; clock</string>
    <string name="NumberTrick8">Eight Can Be Easily Divided (split in half)</string>
    <string name="NumberOnyomi8">はち　hachi</string>
    <string name="NumberKunyomi8">やっ　ya</string>
    <string name="NumberKanji9">九</string>
    <string name="NumberDefinition9">nine</string>
    <string name="NumberStroke9">2 Strokes</string>
    <string name="NumberExample9">九円　kuen</string>
    <string name="NumberExampleMeaning9">9 yen</string>
    <string name="NumberTrick9">Looks Like the Kanji for Ten But Not Quite. Worth Only Nine.</string>
    <string name="NumberOnyomi9">きゅう　kyuu</string>
    <string name="NumberKunyomi9">ここの　kokono</string>
    <string name="NumberKanji10">十</string>
    <string name="NumberDefinition10">ten</string>
    <string name="NumberStroke10">2 Strokes</string>
    <string name="NumberExample10">十月　jyuugatsu</string>
    <string name="NumberExampleMeaning10">October</string>
    <string name="NumberTrick10">Since We Do Math in 10\'s, We Add in 10\'s.</string>
    <string name="NumberOnyomi10">じゅう　jyuu</string>
    <string name="NumberKunyomi10">とお　too</string>
    <string name="NumberKanji11">百</string>
    <string name="NumberDefinition11">hundred</string>
    <string name="NumberStroke11">6 Strokes</string>
    <string name="NumberExample11">三百　sanbyaku</string>
    <string name="NumberExampleMeaning11">three hundred</string>
    <string name="NumberTrick11">This Hundred Has a Little "One" On Top</string>
    <string name="NumberOnyomi11">ひゃく／ぴゃく／びゃく　hyaku/byaku/pyaku</string>
    <string name="NumberKunyomi11">N/A</string>
    <string name="NumberKanji12">千</string>
    <string name="NumberDefinition12">thousand</string>
    <string name="NumberStroke12">3 Strokes</string>
    <string name="NumberExample12">三千　sanzen</string>
    <string name="NumberExampleMeaning12">three thousand</string>
    <string name="NumberTrick12">This Kanji is Made of the Kanji for "one" and "body". Body Sybolized a Thousand.</string>
    <string name="NumberOnyomi12">せん／ぜん　sen/zen</string>
    <string name="NumberKunyomi12">N/A</string>
    <string name="NumberKanji13">万</string>
    <string name="NumberDefinition13">ten thousand</string>
    <string name="NumberStroke13">3 Strokes</string>
    <string name="NumberExample13">十万　jyuuman</string>
    <string name="NumberExampleMeaning13">one hundred thousand</string>
    <string name="NumberTrick13">Since 万 \'s English Pronunciation is Spelled the Same Way as "man", We Can Think of Ten Thousand Men</string>
    <string name="NumberOnyomi13">まん　man</string>
    <string name="NumberKunyomi13">N/A</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_num_flashcards1">NumFlashcards1</string>
    <string name="title_activity_num_flashcards2">NumFlashcards2</string>
    <string name="title_activity_main_animation">MainAnimation</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="welcome"><b>Welcome To Kanji-gate!</b></string>
    <string name="welcomeMessage">Thank you for taking the time to check out Kanji-gate. This app was designed to teach Japanese kanji characters by showing proper
        stroke technique and flash card review. Kanji are separated into categories such as numbers or directions. Quiz game coming soon!</string>
    <string name="title_activity_num_animation1">NumAnimation1</string>
    <string name="AnimDescNum1">This is the proper way to write the kanji "one"</string>
    <string name="AnimDescNum2">This is the proper way to write the kanji "two"</string>
    <string name="AnimDescNum3">This is the proper way to write the kanji "three"</string>
    <string name="AnimDescNum4">This is the proper way to write the kanji "four"</string>
    <string name="title_activity_num_animation">NumAnimation</string>
    <string name="title_activity_num_animation2">NumAnimation2</string>
    <string name="title_activity_num_flashcards3">NumFlashcards3</string>
    <string name="title_activity_num_animation4">NumAnimation4</string>
    <string name="title_activity_num_flashcards4">NumFlashcards4</string>
    <string name="title_activity_num_flashcards5">NumFlashcards5</string>
    <string name="title_activity_num_flashcards6">NumFlashcards6</string>
    <string name="title_activity_num_flashcards7">NumFlashcards7</string>
    <string name="title_activity_num_flashcards8">NumFlashcards8</string>
    <string name="title_activity_num_flashcards9">NumFlashcards9</string>
    <string name="title_activity_num_flashcards10">NumFlashcards10</string>
    <string name="title_activity_num_flashcards11">NumFlashcards11</string>
    <string name="title_activity_num_flashcards12">NumFlashcards12</string>
    <string name="title_activity_num_animation3">NumAnimation3</string>

</resources>