<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NumFlashcards12" >

  
 
 <adina.education.kanji_gate.FlashcardObject
        android:id="@+id/flashcardObject1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:fitsSystemWindows="true" 
        android:onClick="flipOver"/>
     
	
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="92dp"
        android:layout_marginTop="20dp"
		android:shadowColor="#0000FF"
        android:shadowRadius="30" 
        android:text="@string/NumberKanji13"
        android:textSize="30sp"
        android:visibility="invisible" />     	
     
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_marginLeft="120dp"
        android:layout_toRightOf="@+id/textView2"
        android:text="@string/onyomi"
        android:textSize="20sp" 
        android:visibility="invisible"
        />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="24dp"
        android:text="@string/kunyomi"
        android:textSize="20sp" 
        android:visibility="invisible"/>
    
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignLeft="@+id/textView2"
        android:layout_marginTop="10dp"
        android:text="@string/NumberDefinition13"
		android:visibility="invisible" />
    
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:text="@string/NumberOnyomi13" 
		android:visibility="invisible"/>
    
    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView3"
        android:text="@string/NumberKunyomi13"
        android:visibility="invisible" />
    
      <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView4"
        android:text="@string/NumberStroke13" 
        android:visibility="invisible"/>
    
    
      <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView6"
        android:layout_marginTop="5dp"
        android:text="@string/examples"
        android:textSize="20sp" 
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView8"
		android:layout_toRightOf="@+id/textView3"
        android:text="@string/tricksToRemember"
        android:textSize="20sp" 
        android:visibility="invisible"/>
   
    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView8"
        android:layout_below="@+id/textView8"
        android:text="@string/NumberExample13"
        android:visibility="invisible" />
    
    <TextView
        android:id="@+id/textView11"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView9"
        android:layout_alignLeft="@+id/textView9"
        android:text="@string/NumberTrick13" 
        android:visibility="invisible"/>
   
    <TextView
		android:id="@+id/textView12"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"	
		android:layout_below="@+id/textView10"
		android:layout_alignLeft="@+id/textView8"
		android:text="@string/NumberExampleMeaning13"
		android:visibility="invisible"/>
    
    
    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/NumberKanji13"
        android:textSize="70sp" 
        android:visibility="visible" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="nextPage"
        android:text="@string/button_home" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:onClick="prevPage"
        android:text="@string/prev" />
</RelativeLayout>